--- a/solution/backend/regulations/templates/regulations/homepage/subchapter.html
+++ b/solution/backend/regulations/templates/regulations/homepage/subchapter.html
@@ -3,6 +3,6 @@
     <h2>{{ label }}</h2>
 
     {% for child in children %}
-        {% render_nested "regulations/homepage/"|add:child.type|add:".html" "regulations/homepage/child.html" context=child title=title %}
+        {% render_nested "regulations/homepage/"|add:child.type|add:".html" "regulations/homepage/child.html" context=child API_BASE=API_BASE title=title %}
     {% endfor %}
 </div>
