--- a/solution/backend/regulations/templates/regulations/partials/node_types/orphan.html
+++ b/solution/backend/regulations/templates/regulations/partials/node_types/orphan.html
@@ -2,6 +2,6 @@
 
 <article>
     {% with template="regulations/partials/node_types/{node_type}.html"|interpolate:node %}
-        {% render_nested template "regulations/partials/node_types/default.html" resource_count=resource_count node=node cfr_title=cfr_title citation=citation version=version %}
+        {% render_nested template "regulations/partials/node_types/default.html" API_BASE=API_BASE resource_count=resource_count node=node cfr_title=cfr_title citation=citation version=version %}
     {% endwith %}
 </article>
