--- a/solution/ui/regulations/css/scss/partials/_sidebar_left.scss
+++ b/solution/ui/regulations/css/scss/partials/_sidebar_left.scss
@@ -232,11 +232,25 @@ aside.left-sidebar {
     }
 }
 .toc-header {
-    box-sizing: border-box;
     border-bottom: 1px solid $secondary_border_color;
+    margin: 20px 40px 20px 32px;
+    padding-bottom:20px;
+    color: white;
 
-    p {
-        padding: $spacer-2;
+    .toc-subchapter {
+        font-size: 14px;
+        line-height: 18px;
+        margin-bottom: 5px;
+    }
+
+    .toc-part {
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 25px;
+        
+        .description{
+            font-weight: normal;
+        }
     }
 }
 // Controls (i.e. Collapse)
