--- a/solution/ui/regulations/css/scss/_application_settings.scss
+++ b/solution/ui/regulations/css/scss/_application_settings.scss
@@ -60,6 +60,7 @@ $dark_gray: #212121;
 $mid_gray: #5b616b;
 $mid_gray_2: #c4c4c4;
 $mid_gray_3: #767676;
+$mid_gray_4: #a3a3a3;
 $light_gray: #d6d7d9;
 $lighter_gray: #f0f0f0;
 $lightest_gray: #f3f3f3;
@@ -118,6 +119,9 @@ $table_header_background_color: $lightest_gray;
 $hero_background_color: $teal;
 $hero_link_color: $white;
 $hero_link_hover: $light_blue;
+
+$jump_to_submit_disabled: $mid_gray_4;
+$jump_to_submit_active: $mid_blue;
 
 // Borders
 
