--- a/solution/backend/regulations/templates/regulations/base.html
+++ b/solution/backend/regulations/templates/regulations/base.html
@@ -59,7 +59,12 @@ CSS/Javascript etc., should inherit from this template.
 
                 {% block header %}
                     <header id="header" class="sticky">
-                        <header-component></header-component>
+                        <header-component>
+                            <jump-to
+                                slot="jump-to"
+                                apiurl="{% url 'regcore' %}"
+                            ></jump-to>
+                        </header-component>
                     </header>
                 {% endblock %}
 
