feat: header search as slot

--- a/solution/backend/regulations/templates/regulations/base.html
+++ b/solution/backend/regulations/templates/regulations/base.html
@@ -64,6 +64,10 @@ CSS/Javascript etc., should inherit from this template.
                                 slot="jump-to"
                                 apiurl="{% url 'regcore' %}"
                             ></jump-to>
+                            <header-search
+                                slot="search"
+                                apiurl="{% url 'regcore' %}"
+                            ></header-search>
                         </header-component>
                     </header>
                 {% endblock %}
