css changes and slight change to reader

--- a/solution/backend/regulations/templates/regulations/partials/sidebar_left/base.html
+++ b/solution/backend/regulations/templates/regulations/partials/sidebar_left/base.html
@@ -14,7 +14,7 @@
 
 <div class="toc-header">
     <div class="toc-subchapter">{{ subchapter }}</div>
-    <div class="toc-part"> {{ title }} CFR  {{ part }} - <span class="description">{{ part_label }}</span></div> 
+    <div class="toc-part"> {{ title }} CFR  Part {{ part }} - <span class="description">{{ part_label }}</span></div> 
 </div>
 
 <nav role="navigation">
