--- a/solution/backend/regulations/templates/regulations/about.html
+++ b/solution/backend/regulations/templates/regulations/about.html
@@ -3,6 +3,21 @@
 
 {% block title %}About This Tool | Medicaid & CHIP eRegulations{% endblock %}
 
+{% block header %}
+    <header id="header" class="sticky">
+        <header-component>
+            <jump-to
+                slot="jump-to"
+                apiurl="{% url 'regcore' %}"
+            ></jump-to>
+            <header-search
+                slot="search"
+                apiurl="{% url 'regcore' %}"
+            ></header-search>
+        </header-component>
+    </header>
+{% endblock %}
+
 {% block body %}
 <div class="site-container">
     <main class="about">
