--- a/solution/backend/regulations/templates/regulations/homepage.html
+++ b/solution/backend/regulations/templates/regulations/homepage.html
@@ -10,6 +10,22 @@
     <a class="ds-c-skip-nav" href="#main-content">Skip to main content</a>
 {% endblock %}
 
+{% block header %}
+    <header id="header" class="sticky">
+        <header-component>
+            <jump-to
+                slot="jump-to"
+                apiurl="{% url 'regcore' %}"
+            ></jump-to>
+            <header-search
+                slot="search"
+                apiurl="{% url 'regcore' %}"
+            ></header-search>
+        </header-component>
+    </header>
+{% endblock %}
+
+
 {% block body %}
     <main class="homepage">
         <!-- Scroll down button - temporarily commenting out for demo purposes -->
