--- a/solution/backend/regulations/templates/regulations/reader.html
+++ b/solution/backend/regulations/templates/regulations/reader.html
@@ -8,6 +8,23 @@
     <a class="ds-c-skip-nav" href="#main-content">Skip to main content</a>
 {% endblock %}
 
+{% block header %}
+    <header id="header" class="sticky">
+        <header-component>
+            <jump-to
+                slot="jump-to"
+                part="{{ part }}"
+                title="{{ title }}"
+                apiurl="{% url 'regcore' %}"
+            ></jump-to>
+            <header-search
+                slot="search"
+                apiurl="{% url 'regcore' %}"
+            ></header-search>
+        </header-component>
+    </header>
+{% endblock %}
+
 {% block body %}
     <div class="content">
         {% include "regulations/partials/view-and-compare.html" %}
