feat: crude HeaderLinks component on all pages

--- a/solution/backend/regulations/templates/regulations/homepage.html
+++ b/solution/backend/regulations/templates/regulations/homepage.html
@@ -17,6 +17,9 @@
                 slot="jump-to"
                 apiurl="{% url 'regcore' %}"
             ></jump-to>
+            <header-links
+                slot="links"
+            ></header-links>
             <header-search
                 slot="search"
                 apiurl="{% url 'regcore' %}"
