--- a/solution/backend/regulations/templates/regulations/reader.html
+++ b/solution/backend/regulations/templates/regulations/reader.html
@@ -17,6 +17,9 @@
                 title="{{ title }}"
                 apiurl="{% url 'regcore' %}"
             ></jump-to>
+            <header-links
+                slot="links"
+            ></header-links>
             <header-search
                 slot="search"
                 apiurl="{% url 'regcore' %}"
