--- a/solution/backend/regulations/templates/regulations/regulation_landing.html
+++ b/solution/backend/regulations/templates/regulations/regulation_landing.html
@@ -14,6 +14,9 @@
                 title="{{ title }}"
                 apiurl="{% url 'regcore' %}"
             ></jump-to>
+            <header-links
+                slot="links"
+            ></header-links>
             <header-search
                 slot="search"
                 apiurl="{% url 'regcore' %}"
