--- a/solution/backend/regulations/templates/regulations/partials/node_types/SECTION.html
+++ b/solution/backend/regulations/templates/regulations/partials/node_types/SECTION.html
@@ -46,7 +46,7 @@
                     title="{{cfr_title}}"
                     part="{{node.label.0}}"
                     section="{{node.label.1}}"
-                    api-url={% url "regcore" %}
+                    api-url="{{ API_BASE }}"
                 ></gov-info-links>
             </tooltip-container>
         </div>
