--- a/solution/backend/regulations/templates/regulations/search.html
+++ b/solution/backend/regulations/templates/regulations/search.html
@@ -23,6 +23,7 @@
     data-api-url="{% url 'regcore' %}"
     data-about-url="{% url 'about' %}"
     data-custom-url="{{ CUSTOM_URL }}"
+    data-homepage-url="{% url 'homepage' %}"
     data-host="{{ host }}"
 ></div>
 {% endblock %}
