feat: feed about/resources links from django into header component

--- a/solution/backend/regulations/templates/regulations/homepage.html
+++ b/solution/backend/regulations/templates/regulations/homepage.html
@@ -21,6 +21,8 @@
             ></jump-to>
             <header-links
                 slot="links"
+                about-url="{% url 'about' %}"
+                resources-url="{% url 'resources' %}"
             ></header-links>
             <header-search
                 slot="search"
