--- a/solution/backend/regulations/templates/regulations/resources.html
+++ b/solution/backend/regulations/templates/regulations/resources.html
@@ -22,6 +22,7 @@
     data-about-url="{% url 'about' %}"
     data-custom-url="{{ CUSTOM_URL }}"
     data-homepage-url="{% url 'homepage' %}"
+    data-resources-url="{% url 'resources' %}"
     data-host="{{ host }}"
 ></div>
 {% endblock %}
