--- a/solution/backend/regulations/templates/regulations/about.html
+++ b/solution/backend/regulations/templates/regulations/about.html
@@ -14,6 +14,8 @@
             ></jump-to>
             <header-links
                 slot="links"
+                about-url="{% url 'about' %}"
+                resources-url="{% url 'resources' %}"
             ></header-links>
             <header-search
                 slot="search"
