--- a/solution/backend/regulations/templates/regulations/regulation_landing.html
+++ b/solution/backend/regulations/templates/regulations/regulation_landing.html
@@ -18,6 +18,8 @@
             ></jump-to>
             <header-links
                 slot="links"
+                about-url="{% url 'about' %}"
+                resources-url="{% url 'resources' %}"
             ></header-links>
             <header-search
                 slot="search"
