chore: clean up from merging main

--- a/solution/backend/regulations/templates/regulations/about.html
+++ b/solution/backend/regulations/templates/regulations/about.html
@@ -10,7 +10,7 @@
         >
             <jump-to
                 slot="jump-to"
-                apiurl="{% url 'regcore' %}"
+                apiurl="{{ API_BASE }}"
             ></jump-to>
             <header-links
                 slot="links"
@@ -19,7 +19,7 @@
             ></header-links>
             <header-search
                 slot="search"
-                apiurl="{% url 'regcore' %}"
+                apiurl="{{ API_BASE }}"
             ></header-search>
         </header-component>
     </header>
