--- a/solution/backend/regulations/templates/regulations/reader.html
+++ b/solution/backend/regulations/templates/regulations/reader.html
@@ -17,7 +17,7 @@
                 slot="jump-to"
                 part="{{ part }}"
                 title="{{ title }}"
-                apiurl="{% url 'regcore' %}"
+                apiurl="{{ API_BASE}}"
             ></jump-to>
             <header-links
                 slot="links"
@@ -26,7 +26,7 @@
             ></header-links>
             <header-search
                 slot="search"
-                apiurl="{% url 'regcore' %}"
+                apiurl="{{ API_BASE}}"
             ></header-search>
         </header-component>
     </header>
