--- a/solution/backend/regulations/templates/regulations/regulation_landing.html
+++ b/solution/backend/regulations/templates/regulations/regulation_landing.html
@@ -14,7 +14,7 @@
                 slot="jump-to"
                 part="{{ part }}"
                 title="{{ title }}"
-                apiurl="{% url 'regcore' %}"
+                apiurl="{{ API_BASE }}"
             ></jump-to>
             <header-links
                 slot="links"
@@ -23,7 +23,7 @@
             ></header-links>
             <header-search
                 slot="search"
-                apiurl="{% url 'regcore' %}"
+                apiurl="{{ API_BASE }}"
             ></header-search>
         </header-component>
     </header>
