--- a/solution/backend/regulations/templates/regulations/regulation_landing.html
+++ b/solution/backend/regulations/templates/regulations/regulation_landing.html
@@ -23,7 +23,7 @@
             ></header-links>
             <header-search
                 slot="search"
-                apiurl="{{ API_BASE }}"
+                search-url="{% url 'search' %}"
             ></header-search>
         </header-component>
     </header>
