--- a/solution/backend/regulations/templates/regulations/homepage.html
+++ b/solution/backend/regulations/templates/regulations/homepage.html
@@ -26,7 +26,7 @@
             ></header-links>
             <header-search
                 slot="search"
-                apiurl="{{ API_BASE }}"
+                search-url="{% url 'search' %}"
             ></header-search>
         </header-component>
     </header>
