--- a/solution/backend/regulations/templates/regulations/search.html
+++ b/solution/backend/regulations/templates/regulations/search.html
@@ -25,6 +25,7 @@
     data-custom-url="{{ CUSTOM_URL }}"
     data-homepage-url="{% url 'homepage' %}"
     data-resources-url="{% url 'resources' %}"
+    data-search-url="{% url 'search' %}"
     data-host="{{ host }}"
 ></div>
 {% endblock %}
