--- a/solution/ui/regulations/css/scss/partials/_header.scss
+++ b/solution/ui/regulations/css/scss/partials/_header.scss
@@ -48,6 +48,13 @@ header {
             flex-wrap: wrap;
         }
 
+        @mixin header__button {
+            cursor: pointer;
+            background: none;
+            border: none;
+            box-sizing: border-box;
+        }
+
         @mixin header__anchor {
             text-decoration: none;
             color: $secondary_link_color;
@@ -154,13 +161,38 @@ header {
 
                 .links--container {
                     @include custom-max(($eds-width-lg - 1) / 1px) {
+                        display: flex;
+                        height: 36px;
                         padding: 0 8px;
                     }
 
-                    .links__list--trigger-btn {
+                    .more__button {
                         @include header__anchor--bold;
+                        @include header__button;
 
+                        display: flex;
+                        align-items: center;
                         padding: 0 12px;
+
+                        @include custom-min($eds-width-lg / 1px) {
+                            display: none;
+                        }
+
+                        svg {
+                            margin-right: 5px;
+                        }
+                    }
+
+                    .more--dropdown-menu {
+                        position: absolute;
+                        top: 70px;
+                        background: $lightest_gray;
+                        margin-left: 12px;
+                        border: 1px solid $light_gray;
+                        border-radius: 3px;
+                        box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.25);
+                        -webkit-box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.25);
+                        -moz-box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.25);
 
                         @include custom-min($eds-width-lg / 1px) {
                             display: none;
@@ -168,9 +200,28 @@ header {
                     }
 
                     ul.links__list {
+                        list-style: none;
+
+                        &.links__list--dropdown {
+                            margin: 0;
+                            padding: 20px 30px;
+
+                            li {
+                                &:first-child {
+                                    margin-bottom: 12px;
+                                }
+
+                                .header--links__anchor {
+                                    font-size: $font-size-md;
+                                    line-height: 22px;
+                                    color: $mid-gray;
+                                    text-decoration: none;
+                                }
+                            }
+                        }
+
                         &.links__list--wide {
                             padding: 0 12px;
-                            list-style: none;
 
                             @include custom-max(($eds-width-lg - 1) / 1px) {
                                 display: none;
@@ -225,13 +276,13 @@ header {
                         }
                     }
                     .search__button--submit {
+                        @include header__button;
+
                         height: 36px;
                         width: 40px;
-                        box-sizing: border-box;
                         border: 1px solid $light_gray;
                         border-left: none;
                         border-radius: 0 3px 3px 0;
-                        background: none;
 
                         &:hover {
                             .fa {
