--- a/solution/ui/regulations/css/scss/partials/_header.scss
+++ b/solution/ui/regulations/css/scss/partials/_header.scss
@@ -4,6 +4,9 @@
 
 @import "../application_settings";
 
+$header_input_height_narrow: 45px;
+$header_input_height_wide: 36px;
+
 header {
     min-height: 60px;
     box-sizing: unset;
@@ -159,11 +162,20 @@ header {
                 margin-right: 15px;
                 border-right: 1px solid $light_gray;
 
+                @include custom-max(($eds-width-sm - 1) / 1px) {
+                    border: none;
+                    margin-right: 0;
+                }
+
                 .links--container {
                     @include custom-max(($eds-width-lg - 1) / 1px) {
                         display: flex;
                         height: 36px;
                         padding: 0 8px;
+                    }
+
+                    @include custom-max(($eds-width-sm - 1) / 1px) {
+                        padding: 0;
                     }
 
                     .more__button {
@@ -176,6 +188,11 @@ header {
 
                         @include custom-min($eds-width-lg / 1px) {
                             display: none;
+                        }
+
+                        @include custom-max(($eds-width-sm - 1) / 1px) {
+                            border: none;
+                            padding: 0 10px;
                         }
 
                         svg {
@@ -196,6 +213,10 @@ header {
 
                         @include custom-min($eds-width-lg / 1px) {
                             display: none;
+                        }
+
+                        @include custom-max(($eds-width-sm - 1) / 1px) {
+                            right: 15px;
                         }
                     }
 
@@ -253,8 +274,26 @@ header {
 
             .header--search {
                 .search__form {
+                    @include custom-max(($eds-width-sm - 1) / 1px) {
+                        background-color: #fff;
+                        left: 10px;
+                        display: flex;
+                        justify-content: flex-end;
+                    }
+
+                    .form__button--close-mobile-search {
+                        @include header__button;
+
+                        width: 40px;
+                        height: $header_input_height_narrow;
+
+                        @include custom-min($eds-width-sm / 1px) {
+                            display: none;
+                        }
+                    }
+
                     input {
-                        height: 36px;
+                        height: $header_input_height_wide;
                         width: 160px;
                         padding: $spacer-1 $spacer-2;
                         border: 1px solid $light_gray;
@@ -262,27 +301,43 @@ header {
                         border-radius: 3px 0 0 3px;
                         outline: none;
 
+                        &.hidden {
+                            display: none;
+                        }
+
                         @include custom-max(($eds-width-md - 1) / 1px) {
                             width: 115px;
                         }
 
                         @include custom-max(($eds-width-sm - 1) / 1px) {
+                            height: $header_input_height_narrow;
+                            width: calc(100vw - 100px);
+                            margin-left: 0px;
                         }
 
                         &::placeholder {
                             color: $secondary_text_color;
                             font-weight: 400;
-                            height: 36px;
+                            height: $header_input_height_wide;
                         }
                     }
+
                     .search__button--submit {
                         @include header__button;
 
-                        height: 36px;
+                        height: $header_input_height_wide;
                         width: 40px;
                         border: 1px solid $light_gray;
                         border-left: none;
                         border-radius: 0 3px 3px 0;
+
+                        &.hidden {
+                            display: none;
+                        }
+
+                        @include custom-max(($eds-width-sm - 1) / 1px) {
+                            height: $header_input_height_narrow;
+                        }
 
                         &:hover {
                             .fa {
@@ -293,6 +348,16 @@ header {
                         .fa {
                             font-size: 16px;
                             color: $primary_link_color;
+
+                            @include custom-max(($eds-width-sm - 1) / 1px) {
+                                display: none;
+                            }
+                        }
+
+                        svg {
+                            @include custom-min($eds-width-sm / 1px) {
+                                display: none;
+                            }
                         }
                     }
                 }
