--- a/solution/backend/regulations/templates/regulations/homepage.html
+++ b/solution/backend/regulations/templates/regulations/homepage.html
@@ -41,7 +41,10 @@
 
         <div class="hero-banner">
             <div class="site-container hero-content">
-                <jump-to class="jump-to" apiurl="{{ API_BASE }}"></jump-to>
+                <div class="jump-to-label">Jump to Regulation Section</div>
+                <div class="jump-to-container">
+                    <jump-to class="jump-to" apiurl="{{ API_BASE }}"></jump-to>
+                </div>
                 <p class="hero-text">Explore this site as a supplement to existing policy tools. <a href="{% url 'about' %}#automated-updates">How this tool is updated.</a></p>
             </div>
         </div>
