--- a/solution/ui/regulations/css/scss/_application_settings.scss
+++ b/solution/ui/regulations/css/scss/_application_settings.scss
@@ -60,7 +60,7 @@ $dark_gray: #212121;
 $mid_gray: #5b616b;
 $mid_gray_2: #c4c4c4;
 $mid_gray_3: #767676;
-$mid_gray_4: #a3a3a3;
+$mid_gray_4: #707070;
 $light_gray: #d6d7d9;
 $lighter_gray: #f0f0f0;
 $lightest_gray: #f3f3f3;
