fix: Go btn active hover color

--- a/solution/ui/regulations/css/scss/_application_settings.scss
+++ b/solution/ui/regulations/css/scss/_application_settings.scss
@@ -121,6 +121,7 @@ $hero_link_hover: $light_blue;
 
 $jump_to_submit_disabled: $mid_gray_3;
 $jump_to_submit_active: $mid_blue;
+$jump_to_submit_active_focus: $dark_blue;
 
 // Borders
 
