fix: svg caret color fix

--- a/solution/ui/regulations/css/scss/partials/_header.scss
+++ b/solution/ui/regulations/css/scss/partials/_header.scss
@@ -198,6 +198,10 @@ header {
 
                         svg {
                             margin-right: 5px;
+
+                            path {
+                                fill: $mid_blue;
+                            }
                         }
                     }
 
