--- a/solution/ui/regulations/css/scss/partials/_header.scss
+++ b/solution/ui/regulations/css/scss/partials/_header.scss
@@ -137,15 +137,16 @@ header {
             display: flex;
             justify-content: flex-end;
             align-items: center;
-            width: 440px;
+            width: 480px;
             order: 3;
             padding-right: 20px;
 
             @include custom-max(($eds-width-lg - 1) / 1px) {
-                width: 340px;
+                width: 335px;
             }
 
             @include custom-max(($eds-width-md - 1) / 1px) {
+                width: 300px;
                 padding-right: 10px;
             }
 
@@ -300,7 +301,7 @@ header {
 
                     input {
                         height: $header_input_height_wide;
-                        width: 160px;
+                        width: 200px;
                         padding: $spacer-1 0 $spacer-1 $spacer-2;
                         border: 1px solid $light_gray;
                         border-right: none;
@@ -316,6 +317,10 @@ header {
                         &[type="search"]::-webkit-search-cancel-button {
                             cursor: pointer;
                             margin-left: 6px;
+                        }
+
+                        @include custom-max(($eds-width-lg - 1) / 1px) {
+                            width: 170px;
                         }
 
                         @include custom-max(($eds-width-md - 1) / 1px) {
