--- a/solution/ui/regulations/css/scss/partials/_jump_to.scss
+++ b/solution/ui/regulations/css/scss/partials/_jump_to.scss
@@ -113,6 +113,7 @@ form .jump-to-input {
 
     select.jump-to-title {
         width: 85px;
+        margin-right: 5px;
 
         @include custom-max(($eds-width-md - 1) / 1px) {
             width: 70px;
