feat: homepage hero updates

--- a/solution/backend/regulations/templates/regulations/homepage.html
+++ b/solution/backend/regulations/templates/regulations/homepage.html
@@ -41,10 +41,7 @@
 
         <div class="hero-banner">
             <div class="site-container hero-content">
-                <div class="jump-to-label">Jump to Regulation Section</div>
-                <div class="jump-to-container">
-                    <jump-to class="jump-to" apiurl="{{ API_BASE }}"></jump-to>
-                </div>
+                <div class="call-to-action">Look up policy with context.</div>
                 <p class="hero-text">Explore this site as a supplement to existing policy tools. <a href="{% url 'about' %}#automated-updates">How this tool is updated.</a></p>
             </div>
         </div>
