EREGCSC 1548- Reg page left nav shows part info  (#735)
* Added subchapter and basic changes

* basic subchapter changes

* css update

* css update

* slight tweaks to css and add subchapter to reader

* css changes and slight change to reader

--- a/solution/backend/regulations/templates/regulations/partials/sidebar_left/base.html
+++ b/solution/backend/regulations/templates/regulations/partials/sidebar_left/base.html
@@ -12,9 +12,10 @@
     </div>
 {% endblock %}
 
-{% block jump-to %}
-    {% include "regulations/partials/jump_to.html" %}
-{% endblock %}
+<div class="toc-header">
+    <div class="toc-subchapter">{{ subchapter }}</div>
+    <div class="toc-part"> {{ title }} CFR  Part {{ part }} - <span class="description">{{ part_label }}</span></div> 
+</div>
 
 <nav role="navigation">
     {% block navigation %}{% endblock %}
